tests/negative/gold/protected-sdk-test.gold
tests/negative/protected-sdk-test.toit:6:3: error: Can't access protected member '__Protected_' of the SDK libraries
  __Protected_
  ^~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:7:3: error: Can't access protected member '__protected_' of the SDK libraries
  __protected_
  ^~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:8:3: error: Can't access protected member '__protected-global_' of the SDK libraries
  __protected-global_++
  ^~~~~~~~~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:9:3: error: Can't access protected member '__protected-global_' of the SDK libraries
  __protected-global_
  ^~~~~~~~~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:10:3: error: Can't access protected member '__protected-global-getter-setter_' of the SDK libraries
  __protected-global-getter-setter_
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:11:3: error: Can't access protected member '__protected-global-getter-setter_' of the SDK libraries
  __protected-global-getter-setter_ = 499
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:12:3: error: Can't access protected member '__protected-global-getter-setter_' of the SDK libraries
  __protected-global-getter-setter_ += 4
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/negative/protected-sdk-test.toit:13:13: error: Can't access protected member '__' of the SDK libraries
  Protected_.__
            ^~~
tests/negative/protected-sdk-test.toit:14:13: error: Can't access protected member '__named' of the SDK libraries
  Protected_.__named
            ^~~~~~~~
tests/negative/protected-sdk-test.toit:16:9: error: Can't access protected member '__' of the SDK libraries
  Lambda.__ 499 1
        ^~~
tests/negative/protected-sdk-test.toit:17:19: error: Can't access protected member '__' of the SDK libraries
  LazyInitializer_.__ 42
                  ^~~
Compilation failed
